<resources>
    <string name="app_name">InventoryApp</string>
    <string name="welcome">Welcome!</string>
    <string name="submit_button">Log In</string>
    <string name="username_prompt">Username:</string>
    <string name="password_prompt">Password:</string>
    <string name="create_account">Create Account</string>
    <string name="inventory_name_title">Name</string>
    <string name="inventory_image_title">Image</string>
    <string name="inventory_quantity_title">Quantity</string>
    <string name="inventory_description_title">Description</string>
    <string name="SMS_notification_terms">Enabling this setting will send you notifications such as low inventory alerts.</string>
    <string name="enable_notification_button">Enable SMS Notifications</string>
    <string name="permission_status_not_requested">Permission status: Not Requested</string>
    <string name="disable_sms_notifications">Disable SMS Notifications</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
</resources>